--- a/MaratonandoApp/Client/_Imports.razor
+++ b/MaratonandoApp/Client/_Imports.razor
@@ -9,3 +9,4 @@
 @using Microsoft.JSInterop
 @using MaratonandoApp.Client
 @using MaratonandoApp.Client.Shared
+@using MaratonandoApp.Shared.Models.Film
