--- a/MaratonandoApp/Server/Pages/Shared/_LoginPartial.cshtml
+++ b/MaratonandoApp/Server/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using MaratonandoApp.Server.Models
+@using MaratonandoApp.Shared.Models.User;
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
