--- a/MaratonandoApp/Server/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/MaratonandoApp/Server/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using MaratonandoApp.Server.Areas.Identity
 @using MaratonandoApp.Server.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using MaratonandoApp.Server.Models
+@using MaratonandoApp.Shared.Models.User
