Commit 11/07 - Pagina filmes

--- a/MaratonandoApp/Client/Pages/Films/FilmCatalog.razor
+++ b/MaratonandoApp/Client/Pages/Films/FilmCatalog.razor
@@ -30,7 +30,7 @@ else
         {
             <div class="col-6 col-sm-6 col-md-4 col-lg-3" style="margin-bottom: 15px">
                 <div class="card h-100">
-                    <a href="#" class="card-link">
+                    <a href="/filmcatalog/films/@film.FilmId" class="card-link">
                         <img class="card-img" src="@film.Poster" alt="Poster do filme" />
                     </a>
                 </div>
