--- a/MaratonandoApp/Client/_Imports.razor
+++ b/MaratonandoApp/Client/_Imports.razor
@@ -10,3 +10,4 @@
 @using MaratonandoApp.Client
 @using MaratonandoApp.Client.Shared
 @using MaratonandoApp.Shared.Models.Film
+@using MaratonandoApp.Shared.Models.User
