--- a/MaratonandoApp/Client/Pages/Films/FilmCatalog.razor
+++ b/MaratonandoApp/Client/Pages/Films/FilmCatalog.razor
@@ -93,7 +93,7 @@ else
                 });
             }else
             {
-                LimparPesquisa();
+                await LimparPesquisa();
             }
         }
     }
