Commit 25/07 - Construindo pagina serie

--- a/MaratonandoApp/Client/Shared/NavMenu.razor
+++ b/MaratonandoApp/Client/Shared/NavMenu.razor
@@ -14,7 +14,12 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="FilmCatalog">
-                <span class="oi oi-plus" aria-hidden="true"></span> Filmes
+                <span class="oi oi-video" aria-hidden="true"></span> Filmes
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="SeriesCatalog">
+                <span class="oi oi-monitor" aria-hidden="true"></span> Series
             </NavLink>
         </li>
     </ul>
