--- a/MaratonandoApp/Client/_Imports.razor
+++ b/MaratonandoApp/Client/_Imports.razor
@@ -11,3 +11,4 @@
 @using MaratonandoApp.Client.Shared
 @using MaratonandoApp.Shared.Models.Film
 @using MaratonandoApp.Shared.Models.User
+@using MaratonandoApp.Shared.Models.Series
